# docs/swagger.yaml
@@ -17,6 +17,30 @@ definitions:
       message:
         type: string
     type: object
+  domain.RespFindAll:
+    properties:
+      items:
+        items:
+          $ref: '#/definitions/domain.RespPatientData'
+        type: array
+      total:
+        type: integer
+    type: object
+  domain.RespPatientData:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      orderIds:
+        items:
+          type: string
+        type: array
+      orders:
+        items:
+          $ref: '#/definitions/domain.OrderDTO'
+        type: array
+    type: object
   domain.ResponseError:
     properties:
       errorCode:
@@ -75,6 +99,56 @@ paths:
       summary: Update Order By Id
       tags:
       - order
+  /patients:
+    get:
+      description: Find All patients
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success response
+          schema:
+            $ref: '#/definitions/domain.RespFindAll'
+        "400":
+          description: 請求的body、header驗證失敗
+          schema:
+            $ref: '#/definitions/domain.ResponseError'
+      summary: Find All patients
+      tags:
+      - patients
+  /patients/{id}:
+    get:
+      description: Find patient by Id
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success response
+          schema:
+            $ref: '#/definitions/domain.RespPatientData'
+        "400":
+          description: 請求的body、header驗證失敗
+          schema:
+            $ref: '#/definitions/domain.ResponseError'
+      summary: Find patient by Id
+      tags:
+      - patients
+    post:
+      description: Create Order By patientId
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success response
+          schema:
+            $ref: '#/definitions/domain.OrderDTO'
+        "400":
+          description: 請求的body、header驗證失敗
+          schema:
+            $ref: '#/definitions/domain.ResponseError'
+      summary: Create Order By patientId
+      tags:
+      - patients
 securityDefinitions:
   ApiKeyAuth:
     in: header
